--- a/style.css
+++ b/style.css
@@ -177,3 +177,49 @@ footer{
 a{
     color: var(--primary-cyan);
 }
+
+
+@media (min-width: 600px) {
+    body {
+      max-width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    main {
+      display: grid;
+      grid-template-columns: 1fr 1fr; /* 2 columnas */
+      grid-template-rows: auto auto; /* 2 filas */
+      max-width: 800px; /* Ajuste para pantallas grandes */
+      height: auto;
+      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    }
+  
+    .box1 {
+       
+        display: grid;
+        grid-column: span 2; /* Que ocupe el ancho completo */
+        justify-content: center;
+        height: 200px;
+    }
+  
+    .box2, .box3 {
+      text-align: left;
+      padding: 30px;
+    }
+  
+    .box2_price {
+      justify-content: flex-start;
+    }
+  
+    .box2_button {
+      justify-content: flex-start;
+    }
+  
+    button {
+      width: 100%;
+    }
+  }
+  
